--- a/success.html
+++ b/success.html
@@ -14,6 +14,6 @@
 <br><br><br><br><br><br><br>
 <center>
 <h4>Funds Sent Successfully ✅ </h4>
-<h4>₦51,271.00, has been sent to your Opay account
+<h4>₦51,271.00, has been sent to your PalmPay account
 <br>
 You will be credited in less than 2mins</h4>
