--- a/pending.html
+++ b/pending.html
@@ -46,7 +46,7 @@
 <body>
   <form action="success.html">
 <h1 style="margin-left: 18px;">Bank Transfer</h1>
-<p style="color: #777E8F; margin-left: 18px;">Pay with a Bank Transfer from your NGN bank account, take a screenshot of your payment</p>
+<p style="color: #777E8F; margin-left: 18px;">Pay with a Bank Transfer from your NGN bank account, paste your unique transaction reference</p>
 <br />
 <br />
 <div class="box">
@@ -55,7 +55,7 @@
   <br />
   <br />
   <h3 style="float: left; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; margin-left: 10px;">₦3,000.00</h3>
-  <h3 style="float: right; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; margin-right: 1px; font-size: 16px;">GOMONEY BANK
+  <h3 style="float: right; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; margin-right: 1px; font-size: 16px;">PALMPAY BANK
 </h3>
   <br />
 </div>
@@ -68,7 +68,7 @@
   <br />
   <hr />
   <br />
-  <p style="margin-right: 7px; margin-left: 7px;">Account name: <span style="float: right;">UKPAI SAMUEL</span></p>
+  <p style="margin-right: 7px; margin-left: 7px;">Account name: <span style="float: right;">SAMUEL UKPAI</span></p>
   </div>
   <br />
   <p style="margin-left: 18px;">Payment Reciept</p>
